<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Lab</string>
    <string name="connect_button">Connect!!</string>
    <string name="welcome_content">Welcome Message</string>
    <string name="waveform_shape">Waveform Shape:</string>
    <string name="title_activity_devices">Devices</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">AG33220A - WFG</string>
    <string name="title_section2">HP33120A - WFG</string>
    <string name="title_section3">HP34401A - DMM</string>
    <string name="title_section4">HP54602B - Scope</string>
    
    <string-array name="waveform_shape">
        <item>DC</item>
        <item>Sine</item>
        <item>Square</item>
        <item>Triangle</item>
        <item>Ramp</item>
        <item>Pulse</item>
        <item>Noise</item>
        <item>Sinc</item>
        <item>Neg. Ramp</item>
        <item>Exp. Rise</item>
        <item>Exp. Fall</item>
    </string-array>
    <string-array name="units">
        <item>Vpp</item>
        <item>Vrms</item>
        <item>dB</item>
    </string-array>
    <string-array name="dmm_functions">
        <item>DC Voltage</item>
        <item>AC Voltage</item>
        <item>2 - Wire Resistance</item>
        <item>4 - Wire Resistance</item>
        <item>DC Current</item>
        <item>AC Current</item>
        <item>Frequency</item>
        <item>Period</item>
        <item>Continuity</item>
        <item>Diode Checking</item>
        <item>VDC Ratio</item>
    </string-array>
    <string-array name="dmm_resolution">
        <item>4.5</item>
        <item>5.5</item>
        <item>6.5</item>
    </string-array>
    <string-array name="dmm_trigger_source">
        <item>Immediate</item>
        <item>Software(Bus)</item>
        <item>External</item>
        <item>Internal</item>
    </string-array>
    <string name="unit">Unit:</string>
    <string name="frequency">Frequency (Hz):</string>
    <string name="amplitude">Amplitude (Vpp):</string>
    <string name="offset">Offset (Vdc):</string>
    <string name="ramp_symmetry">Ramp Symmetry (%):</string>
    <string name="duty_cycle">Duty Cycle (%) Sq:</string>
    <string name="duty_cycle_pulse">Duty Cycle (%) Puls:</string>
    <string name="function">Function:</string>
    <string name="resolution">Resolution:</string>
    <string name="trigger_source">Trigger Src:</string>
    <string name="manual_range">Manual Range:</string>
    <string name="autozero">Auto-Zero</string>
    <string name="auto_range">Auto-Range</string>
    <string name="measure">Measure:</string>
    <string name="channel1">Channel 1</string>
    <string name="channel2">Channel 2</string>
    <string name="ch1">CH 1</string>
    <string name="ch2">CH2</string>
    <string name="coupling">Coupling:</string>
    <string name="probe">Probe:</string>
    <string name="range">Range:</string>
    <string name="position">Position:</string>
    <string name="autoset">Autoset</string>
    <string name="delay">Delay:</string>
    <string name="trigger_level">Trigger Lvl:</string>
    <string-array name="oscilloscope_functions">
        <item>Vpp</item>
        <item>Vaverage</item>
        <item>Vrms</item>
        <item>Vmax</item>
        <item>Vmin</item>
        <item>Vtop</item>
        <item>Vbase</item>
        <item>Frequency</item>
        <item>Period</item>
        <item>Duty Cycle</item>
        <item>Pos. Width</item>
        <item>Neg. Width</item>
        <item>Rise Time</item>
        <item>Fall Time</item>
    </string-array>
    <string-array name="oscilloscope_coupling">
        <item>DC</item>
        <item>AC</item>
        <item>GND</item>
    </string-array>
    <string-array name="oscilloscope_probe">
        <item>1X</item>
        <item>10X</item>
        <item>100X</item>
    </string-array>
    <string-array name="oscilloscope_trigger_src">
        <item>Channel 1</item>
        <item>Channel 2</item>
    </string-array>
        <string name="do_it">Do it!</string>
        <string name="thousand">1000</string>
        <string name="one">1</string>
        <string name="zero">0</string>
        <string name="fifty">50</string>
        <string name="hundred">100</string>
        <string name="title_section_5">Chart</string>
        <string name="function_1">Function 1:</string>
        <string name="function_2">Function 2:</string>
        <string name="chart_activity">HP54602b Chart</string>
        <string name="menu_disconnect">Disconnect</string>

</resources>
